# note-agent

./: .env.example  README.md  app.py  pyproject.toml  requirements.txt
scripts/: demo1.py  demo2.py  main.py
src/note_agent/: __main__.py  asset_tools.py  assets.py  cli.py  config.py  graph.py  input_loader.py  models.py  prompts.py  retrieval.py  schemas.py  service.py  state.py  storage.py  tools.py
tests/unit/: conftest.py  test_assets_agent.py  test_graph_agent.py  test_input_api.py  test_tools_api.py
