[project]
name = "note-agent"
version = "4.0.0"
description = "LangGraph-based research note agent with unified reference retrieval and multimodal assets."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.13.0",
    "ddgs>=9.14.4",
    "langchain>=1.3.1",
    "langchain-core>=1.4.0",
    "langchain-deepseek>=1.0.1",
    "langchain-openai>=1.2.0",
    "langgraph>=1.2.0",
    "matplotlib>=3.10.0",
    "pydantic>=2.13.4",
    "python-dotenv>=1.2.2",
    "requests>=2.32.0",
    "streamlit>=1.50.0",
]

[project.scripts]
note-agent = "note_agent.cli:main"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "ruff>=0.15.13",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/note_agent"]
